4.1/3591276d16f8e568449e4b6c719165ad2decf222
c6x: kernel: setup: Include "linux/console.h"

Or c6x will cause building break for allmodconfig, the related error:

    CC      arch/c6x/kernel/setup.o
  arch/c6x/kernel/setup.c: In function 'setup_arch':
  arch/c6x/kernel/setup.c:433:2: error: 'conswitchp' undeclared (first use in this function)
    conswitchp = &dummy_con;
    ^
  arch/c6x/kernel/setup.c:433:2: note: each undeclared identifier is reported only once for each function it appears in
  arch/c6x/kernel/setup.c:433:16: error: 'dummy_con' undeclared (first use in this function)
    conswitchp = &dummy_con;
                  ^

Signed-off-by: Chen Gang <gang.chen.5i5j@gmail.com>
[removed unnecessary #ifdef around include]
Signed-off-by: Mark Salter <msalter@redhat.com>

